# minifb-async-examples

./: .gitignore  .project  Cargo.toml  README.md  build.sh  build_web.sh
demo_server/: server.py
demo_server/web_app/: index.html
desktop_app/: Cargo.toml
desktop_app/src/: main.rs
minifb_demo/: Cargo.toml
minifb_demo/src/: lib.rs
minifb_demo/src/my_game/: mod.rs
minifb_demo/src/web_setup/: mod.rs
req_anim_frame/: Cargo.toml
req_anim_frame/src/: lib.rs
src/: main.rs
tools/: gen_trig_tables.py
web_app/: Cargo.toml
web_app/src/: lib.rs
web_app/src/my_game/: mod.rs  precalc.rs
web_app/src/web_setup/: error.rs  loader.rs  mod.rs
