[package]
name = "desktop_app"
version = "0.1.0"
authors = ["Emilio Moretti <emilio.moretti@gmail.com>"]
edition = "2018"

[features]
default = [ "minifb_demo/desktop" ]

[dependencies]
async-std = "1.9.0"
minifb = { git = 'https://github.com/dc740/rust_minifb.git', branch = 'wasm_websys_wip', default-features = true }
minifb_demo = { path = "../minifb_demo" }