[package]
name = "desktop_app"
version = "0.1.0"
authors = ["Emilio Moretti <emilio.moretti@gmail.com>"]
edition = "2018"

[features]
default = [ "web_app/desktop" ]

[dependencies]
async-std = "1.11.0"
minifb = { git = 'https://github.com/dc740/rust_minifb.git', branch = 'wasm_websys_wip', default-features = true }
web_app = { path = "../web_app" }
