[package]
name = "web_app"
version = "0.1.0"
authors = ["dc"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = [ "desktop" ]
web = [ "instant/wasm-bindgen", "minifb/web" ]
desktop = [ "minifb/default" ]


[dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.74"
web-sys = "0.3.51"
instant = "0.1.9"
minifb = { git = 'https://github.com/dc740/rust_minifb.git', branch = 'wasm_websys_wip', default-features = false }
js-sys = "0.3.51"
wasm-rs-shared-channel = "0.1.0"
wasm-bindgen-futures = "0.4.24"

# Set these to `false` when running on 32 bit platforms.
# there is a bug in wasm-pack https://github.com/rustwasm/wasm-pack/issues/974
[package.metadata.wasm-pack.profile.dev]
wasm-opt = true

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = true

